--- a/templates/upload_form.html
+++ b/templates/upload_form.html
@@ -1,13 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{% if "html_safe" in message.tags %}{{ message|safe }}{% else %}{{ message }}{% endif %}</li>
+    {% endfor %}
+{% endif %}
+</ul>
     <form method="post" action="" enctype="multipart/form-data"> {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="upload meme">
     </form>
-</body>
-</html>
+{% endblock content %}
