--- a/templates/index.html
+++ b/templates/index.html
@@ -1,296 +1,11 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Meme It!</title>
+{% extends "base.html" %}
 
-<!-- Bootstrap -->
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-          <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-<![endif]-->
-<link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}" />
-</head>
-<body>
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Meme It!</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Memes<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Meme Characters</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-          <li id="sear"><div class="form-group">
-            <form action="" class="search-form">
-                <div class="form-group has-feedback">
-            		<label for="search" class="sr-only">Search</label>
-            		<input type="text" class="form-control" name="search" id="search" placeholder="search">
-              		<span class="glyphicon glyphicon-search form-control-feedback"></span>
-            	</div>
-          </form>
-      </div></li>
-          <li><a href="#">Sign In</a></li>
-          <li><a href="#">Sign Out</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-      <div class="row">
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-2"><img class="img-circle" alt="Free Shipping" src="img/40X40.gif"></div>
-        <div class="col-lg-7 col-md-9 col-sm-9 col-xs-9">
-          <h4>&nbsp; Create Meme</h4>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-      <div class="row">
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-2"><img class="img-circle" alt="Free Shipping" src="img/40X40.gif"></div>
-        <div class="col-lg-6 col-md-9 col-sm-9 col-xs-9">
-          <h4>&nbsp;&nbsp;Create GIF</h4>
-        </div>
-      </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-      <div class="row">
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-2"><img class="img-circle" alt="Free Shipping" src="img/40X40.gif"></div>
-        <div class="col-lg-6 col-md-9 col-sm-9 col-xs-9">
-            <a href='/meme/upload/'><h4>&nbsp;&nbsp;&nbsp;Upload&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;Meme</h4></a>
-        </div>
-      </div>
-    </div>
-      <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
-      <div class="row">
-        <div class="col-lg-2 col-md-3 col-sm-3 col-xs-2"><img class="img-circle" alt="Free Shipping" src="img/40X40.gif"></div>
-        <div class="col-lg-6 col-md-9 col-sm-9 col-xs-9">
-          <h4>&nbsp;&nbsp;Create Pie</h4>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<hr>
-<h2 class="text-center">POPULAR</h2>
-<hr>
-<div class="container">
-  <div class="row text-center">
-    {% for obj in object_list|slice:":6" %}
+{% block content %}
+{% for obj in object_list %}
    <div class="col-sm-4 col-md-4 col-lg-4 col-xs-6">
         <div class="thumbnail"> <a href='/meme/{{ obj.id }}/'><img src = "{{ obj.post.url}}" height="300" width="300" ></a><br>
          -{{obj.username}} <br/>
         </div>
     </div>
 {% endfor %}
-    <div class="col-sm-4 col-md-4 col-lg-4 col-xs-6">
-      <div class="thumbnail"> <img src="" alt="Thumbnail Image 1" class="img-responsive">
-
-      </div>
-    </div>
-    <div class="col-sm-4 col-md-4 col-lg-4 col-xs-6">
-      <div class="thumbnail"> <img src="" alt="Thumbnail Image 1" class="img-responsive">
-
-      </div>
-    </div>
-    <div class="col-sm-4 col-md-4 col-lg-4 col-xs-6 hidden-lg hidden-md hidden-sm">
-      <div class="thumbnail"> <img src="" alt="Thumbnail Image 1" class="img-responsive">
-
-      </div>
-    </div>
-  </div>
-  <div class="row text-center hidden-xs">
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-      <div class="thumbnail"> <img src="" alt="Thumbnail Image 1" class="img-responsive">
-
-      </div>
-    </div>
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-      <div class="thumbnail"> <img src="" alt="Thumbnail Image 1" class="img-responsive">
-
-      </div>
-    </div>
-    <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-      <div class="thumbnail"> <img src="" alt="Thumbnail Image 1" class="img-responsive">
-
-      </div>
-    </div>
-  </div>
-  <nav class="text-center">
-    <!-- Add class .pagination-lg for larger blocks or .pagination-sm for smaller blocks-->
-    <ul class="pagination">
-      <li> <a href="#" aria-label="Previous"> <span aria-hidden="true">&laquo;</span> </a> </li>
-      <li class="active"><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="#">3</a></li>
-      <li><a href="#">4</a></li>
-      <li class="disabled"><a href="#">5</a></li>
-      <li> <a href="#" aria-label="Next"> <span aria-hidden="true">&raquo;</span> </a> </li>
-    </ul>
-  </nav>
-</div>
-<hr>
-<h2 class="text-center">NEWEST</h2>
-<hr>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-4 col-md-6">
-      <div class="media-object-default">
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"> </a> </div>
-          <div class="media-body">
-            <h4 class="media-heading">Product</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, vitae doloremque voluptatum doloribus neque assumenda velit sapiente quas aliquam ratione. Sed possimus corporis dolorum optio eaque in asperiores soluta expedita! </div>
-        </div>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"> </a> </div>
-          <div class="media-body">
-            <h4 class="media-heading">Product</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, quasi doloribus non repellendus quae aperiam. Quos, eligendi itaque soluta ut dignissimos reprehenderit commodi laboriosam quis atque minus enim magnam delectus.</div>
-        </div>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"></a></div>
-          <div class="media-body">
-            <h4 class="media-heading">Product</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus, repellendus, ad, adipisci neque earum culpa magnam veritatis ipsum dolores odio laboriosam sed veniam accusamus! Architecto, provident nulla recusandae repellendus illo!</div>
-        </div>
-      </div>
-    </div>
-    <hr class="hidden-md hidden-lg">
-    <div class="col-lg-4 col-md-6">
-      <div class="media-object-default">
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"></a></div>
-          <div class="media-body">
-            <h4 class="media-heading">Product</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, eos, et in quam laboriosam ipsum laudantium laborum provident nihil modi reprehenderit tempora voluptatum quasi non libero quaerat vel. Assumenda, officiis?</div>
-        </div>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"></a></div>
-          <div class="media-body">
-            <h4 class="media-heading">Product</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, minus, praesentium dignissimos non provident et consectetur illo expedita aliquam laboriosam esse incidunt deleniti accusantium debitis voluptas. Non vitae quos dolorem.</div>
-        </div>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"></a></div>
-          <div class="media-body">
-            <h4 class="media-heading">Product</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio, ducimus quidem aliquam voluptate quas impedit modi neque quasi deleniti dicta. Dolore, provident, unde voluptas dicta fugit odit maxime eius minus!</div>
-        </div>
-      </div>
-    </div>
-    <hr class="hidden-lg">
-    <div class="col-lg-4 col-md-12 hidden-md">
-      <div class="media-object-default">
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"></a></div>
-          <div class="media-body">
-            <h4 class="media-heading">Media heading 1</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro dolorum reprehenderit vitae omnis. Quidem, recusandae, magni ut perspiciatis nobis consequuntur ullam molestias molestiae obcaecati ea labore aspernatur modi. Impedit, fugit!</div>
-        </div>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"></a></div>
-          <div class="media-body">
-            <h4 class="media-heading">Media heading 2</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, libero, ea itaque atque vero quidem esse optio minus tenetur dolorem delectus nemo fugit deserunt quibusdam veritatis assumenda obcaecati praesentium omnis!</div>
-        </div>
-        <div class="media">
-          <div class="media-left"> <a href="#"> <img class="media-object" src="img/100X125.gif" alt="placeholder image"></a></div>
-          <div class="media-body">
-            <h4 class="media-heading">Media heading 2</h4>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, cumque, ad voluptatibus vel perspiciatis reprehenderit magni in recusandae voluptatum iusto commodi laudantium veritatis esse labore nisi error tempora debitis impedit.</div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<hr>
-  <div class="container well">
-    <div class="row">
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-7">
-        <div class="row">
-          <div class="col-sm-4 col-md-4 col-lg-4 col-xs-6">
-            <div>
-              <ul class="list-unstyled">
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-4  col-xs-6">
-            <div>
-              <ul class="list-unstyled">
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-4 col-md-4 col-lg-4 col-xs-6">
-            <div>
-              <ul class="list-unstyled">
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-                <li> <a>Link anchor</a> </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-5"> 
-        <address>
-        <strong>MyStoreFront, Inc.</strong><br>
-        Indian Treasure Link<br>
-        Quitman, WA, 99110-0219<br>
-        <abbr title="Phone">P:</abbr> (123) 456-7890
-      </address>
-        <address>
-        <strong>Full Name</strong><br>
-        <a href="mailto:#">first.last@example.com</a>
-        </address>
-        </div>
-    </div>
-  </div>
-
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        <p>Copyright © MyWebsite. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
-<script src="js/jquery-1.11.2.min.js"></script> 
-<script src="js/bootstrap.min.js"></script>
-  </div>
-</nav>
-</body>
-</html>
+{% endblock %}
