--- a/templates/details.html
+++ b/templates/details.html
@@ -4,10 +4,8 @@
     <img src = "{{memepost.url}}"  height="300" width="300"><br>
     <h4><small>{{ instance.creation_date|timesince }} ago</small></h4>
 
-
-    <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}">
-Facebook
-</a>
+<p><div class="fb-like" data-href="{{ request.build_absolute_uri }}" data-layout="button_count" data-action="like" data-show-faces="true" data-share="true"></div></p>
+<hr/>
 
 <a href="https://twitter.com/home?status={{ share_string }}%20{{ request.build_absolute_uri }}">
 Twitter
@@ -21,7 +19,20 @@ Linkedin
 </a>
 
 <a href="http://www.reddit.com/submit?url={{ request.build_absolute_uri }}&title={{ share_string }}.">Reddit</a>
+    <br>
 <a href="{% url 'memes:delete' instance.id %}"><button type="button" class="btn btn-danger">Delete</button></a>
+<div class='row'>
+<div class='col-sm-12'>
+
+{{ instance.content|linebreaks }}
+
+<hr/>
+<br/>
+<div class="fb-comments" data-href="{{ request.build_absolute_uri }}" data-numposts="5"  data-order-by="social"></div>
+
+</div>
+</div>
+</div>
 
 
 
